--- a/byteclass-experimental/style.css
+++ b/byteclass-experimental/style.css
@@ -54,5 +54,25 @@ main {
   gap: 8px 12px;
 }
 
+.board ul li {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 40px; 
+  padding: 8px 12px;
+  background-color: rgba(232, 225, 225, 0.873);
+  box-shadow: 2px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;  
+  font-weight: 200;
+}
+
+.board ul li:hover {
+  cursor: move;
+  background-color: rgba(163, 156, 156, 0.5);
+  box-shadow: 4px 4px rgba(0, 0, 0, 0.4);  
+  color: rgb(255, 255, 255);
+  font-weight: 400;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
 
